src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this referral is specific to a child, please add the child here.</inlineHelpText>
        <label>Child</label>
        <referenceTo>Child__c</referenceTo>
        <relationshipLabel>Referral</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Programme</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Referral</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>